--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -1,22 +1,5 @@
-<!doctype html>
-<!--[if lte IE 8]>     <html class="ie ie8 lt-ie8 lt-ie9" lang="ko"> <![endif]-->
-<!--[if IE 9]>         <html class="ie ie9 lt-ie9" lang="ko"> <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ko"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>UI Component</title>
-
-    <meta name="description" content="...">
-    <meta name="keyword" content="...">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="../assets/css/style.css">
-
-    <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/html5shiv-printshiv.min.js"></script>
-    <script src="../assets/js/vendor/respond.min.js"></script>
-    <![endif]-->
+<% locals.setLayout('_layout/_default.ejs'); -%>
+<% locals.block('title', 'UI Component') -%>
 </head>
 <body class="docs docs-layout-frame">
     <div class="docs-frame">
@@ -46,14 +29,6 @@
             </div>
         </div>
     </div>
-
-
-    <!-- ========================================
-         javascript
-         ========================================= -->
-    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/plugins.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/docs.js"></script>
+<%- locals.include('_include/_footAssets.ejs') %>
 </body>
 </html>
