--- a/src/html/_layout/_default.ejs
+++ b/src/html/_layout/_default.ejs
@@ -14,6 +14,6 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
+    <script src="../assets/js/preRender.polyfill.js"></script>
     <![endif]-->
 <%- locals.body %>
