--- a/src/html/tab.ejs
+++ b/src/html/tab.ejs
@@ -116,7 +116,7 @@
                 <div class="tablist" role="tablist">
                     <ul>
                         <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
-                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span><i>Nostrum.</i></span></a></li>
                         <li class="tablist__item"><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
                         <li class="tablist__item"><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
                     </ul>
