--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -205,29 +205,67 @@ i, em {
 }
 
 /* floats */
-.pull-left { float: left !important; }
-.pull-right { float: right !important; }
+.pull-left {
+    float: left !important;
+}
+.pull-right {
+    float: right !important;
+}
 
 /* Typo & Color */
-.font-small { font-size: 12px !important; }
-.font-medium { font-size: 14px !important; }
-.font-large { font-size: 16px !important; }
-.font-bold { font-weight: bold !important; }
-.font-light { font-weight: normal !important; }
+.font-small {
+    font-size: 12px !important;
+}
+.font-medium {
+    font-size: 14px !important;
+}
+.font-large {
+    font-size: 16px !important;
+}
+.font-bold {
+    font-weight: bold !important;
+}
+.font-light {
+    font-weight: normal !important;
+}
 
-.text-left { text-align: left !important; }
-.text-right { text-align: right !important; }
-.text-center { text-align: center !important; }
-.text-justify { text-align: justify !important; }
-.text-nowrap { white-space: nowrap !important; }
-.underline { text-decoration: underline !important; }
+.text-left {
+    text-align: left !important;
+}
+.text-right {
+    text-align: right !important;
+}
+.text-center {
+    text-align: center !important;
+}
+.text-justify {
+    text-align: justify !important;
+}
+.text-nowrap {
+    white-space: nowrap !important;
+}
+.underline {
+    text-decoration: underline !important;
+}
 
-.link { color: #115bab !important; }
-.color-dark { color: #666 !important; }
-.color-green { color: #70953f !important; }
-.color-gray { color: #999 !important; }
-.color-orange { color: #ff5a00 !important; }
-.color-red { color: #e93e44 !important; }
+.link {
+    color: #115bab !important;
+}
+.color-dark {
+    color: #666 !important;
+}
+.color-green {
+    color: #70953f !important;
+}
+.color-gray {
+    color: #999 !important;
+}
+.color-orange {
+    color: #ff5a00 !important;
+}
+.color-red {
+    color: #e93e44 !important;
+}
 
 
 
