--- a/src/assets/scss/component/_table.scss
+++ b/src/assets/scss/component/_table.scss
@@ -1,31 +1,78 @@
 /* ==========================================================================
    table
    ========================================================================== */
-.table { position: relative; border-top: 1px solid #000; border-bottom: 1px solid #000; }
-    .table caption { overflow: hidden; position: absolute; width: 0; height: 0; margin: 0; padding: 0; border: 0; clip: rect(0 0 0 0); }
-    .table > table { position: relative; width: 100%; border-spacing: 0; border-collapse: collapse; }
-    .table > table > thead > tr > th,
-    .table > table > tbody > tr > th,
-    .table > table > thead > tr > td,
-    .table > table > tbody > tr > td { padding: 5px 10px; height: 40px; line-height: 20px; font-size: 14px; text-align: left; vertical-align: middle; word-wrap: break-word; word-break: break-all; }
-    .table > table > thead > tr > th { border-bottom: 1px solid #999; background: #f1f1f1; }
-    .table > table > tbody > tr > th { border-top: 1px solid #ddd; background: #f8f8f8; }
-    .table > table > tbody > tr > td { border-top: 1px solid #ddd; }
-    .table > table > tbody > tr:first-child th { border-top: 0; }
-    .table > table > tbody > tr:first-child td { border-top: 0; }
+.table {
+    position: relative;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+.table caption {
+    overflow: hidden;
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
+.table > table {
+    position: relative;
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+.table > table > thead > tr > th,
+.table > table > tbody > tr > th,
+.table > table > thead > tr > td,
+.table > table > tbody > tr > td {
+    padding: 5px 10px;
+    height: 40px;
+    line-height: 20px;
+    font-size: 14px;
+    text-align: left;
+    vertical-align: middle;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+.table > table > thead > tr > th {
+    border-bottom: 1px solid #999;
+    background: #f1f1f1;
+}
+.table > table > tbody > tr > th {
+    border-top: 1px solid #ddd;
+    background: #f8f8f8;
+}
+.table > table > tbody > tr > td {
+    border-top: 1px solid #ddd;
+}
+.table > table > tbody > tr:first-child th {
+    border-top: 0;
+}
+.table > table > tbody > tr:first-child td {
+    border-top: 0;
+}
 
-    /* type */
-    /* bordered */
-    .table-bordered {}
-        .table-bordered > table > thead > tr > th + th,
-        .table-bordered > table > tbody > tr > th + th { border-left: 1px solid #ddd; }
-        .table-bordered > table > tbody > tr > th + td { border-left: 1px solid #999; }
-        .table-bordered > table > thead > tr > td + td,
-        .table-bordered > table > tbody > tr > td + td { border-left: 1px solid #ddd; }
+/* type */
+/* bordered */
+.table-bordered {}
+.table-bordered > table > thead > tr > th + th,
+.table-bordered > table > tbody > tr > th + th {
+    border-left: 1px solid #ddd;
+}
+.table-bordered > table > tbody > tr > th + td {
+    border-left: 1px solid #999;
+}
+.table-bordered > table > thead > tr > td + td,
+.table-bordered > table > tbody > tr > td + td {
+    border-left: 1px solid #ddd;
+}
 
-    /* centered */
-    .table-centered {}
-        .table-centered > table > thead > tr > th,
-        .table-centered > table > tbody > tr > th,
-        .table-centered > table > thead > tr > td,
-        .table-centered > table > tbody > tr > td { text-align: center; }
+/* centered */
+.table-centered {}
+.table-centered > table > thead > tr > th,
+.table-centered > table > tbody > tr > th,
+.table-centered > table > thead > tr > td,
+.table-centered > table > tbody > tr > td {
+    text-align: center;
+}
