--- a/src/html/tab.ejs
+++ b/src/html/tab.ejs
@@ -161,7 +161,7 @@
                     </div>
                 </div>
 
-                <button class="tab02-eq3">tab02-03 open</button>
+                <button id="tab02-eq3">tab02-03 open</button>
             </div>
 
             <div class="docs-component__code language-markup"><script type="text/plain">
@@ -191,10 +191,10 @@
 
 <%- locals.include('_include/_footAssets.ejs') %>
     <script>
-        $('.tab02-eq3').on('click', function(e) {
+        document.getElementById('tab02-eq3').addEventListener('click', function(e) {
             e.preventDefault();
 
-            UI.tab.open( $('#tab02-03') )
+            UI.tab.open( document.getElementById('tab02-03') )
         });
     </script>
 </body>
